# mozdata-chat

./: .gitignore  README.md
agent/: .gitignore  Makefile  README.md  gemini_enterprise_integration.md  pyproject.toml  run_query_writer_test.py
agent/app/: agent.py  agent_engine_app.py  datahub_tools.py  query_writer.py  query_writer_knowledge.py  retrievers.py  templates.py
agent/app/app_utils/: deploy.py  telemetry.py  typing.py
agent/data_ingestion/: README.md  pyproject.toml
agent/data_ingestion/data_ingestion_pipeline/: pipeline.py  submit_pipeline.py
agent/data_ingestion/data_ingestion_pipeline/components/: fetch_docs.py  ingest_data.py
agent/scripts/: setup_data_docs_infrastructure.sh
agent/tests/integration/: test_agent.py  test_agent_engine_app.py
agent/tests/unit/: test_dummy.py
ui/: .dockerignore  .firebaserc  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.combined  README.md  firebase.json  next.config.ts  package.json  supervisord.conf
ui/functions/: index.js  package.json
ui/proxy/: main.py  pyproject.toml
ui/scripts/: run-proxy.bat  run-proxy.sh  setup-proxy.bat  setup-proxy.sh
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/copilotkit/: route.ts
ui/src/app/api/health/: route.ts
ui/src/components/: AuthProvider.tsx  BackendLoadingScreen.tsx  CopilotKitProvider.tsx  ToolRenderer.tsx
ui/src/hooks/: useBackendReady.ts
ui/tf/: main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
